--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^6.1.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
